--- a/_posts/2017-02-04-Hello-2017.md
+++ b/_posts/2017-02-04-Hello-2017.md
@@ -4,7 +4,7 @@ title:      Hello 2019
 subtitle:    "\"Hello World, Hello Blog\""
 date:       2019-01-04
 author:     GFF
-header-img: img/post-bg-2015.jpg
+header-img: img/post-bg-desk.jpg
 catalog: true
 tags:
     - 生活
@@ -19,7 +19,7 @@ GFF 的 Blog 就这么开通了。
 
 本来打算在年前完成 Blog 的搭建，不曾料想踩了很多坑。。。
 
-[跳过废话，直接看技术实现 ](#build) 
+[实现过程 ](#build)
 
 2019 年，我的 Blog 总算是搭建好了。
 
@@ -31,32 +31,23 @@ GFF 的 Blog 就这么开通了。
 
 ## 正文
 
-接下来说说搭建这个博客的技术细节。  
 
-正好之前就有关注过 [GitHub Pages](https://pages.github.com/) + [Jekyll](http://jekyllrb.com/) 快速 Building Blog 的技术方案，非常轻松时尚。
 
-其优点非常明显：
-
-* **Markdown** 带来的优雅写作体验
-* 非常熟悉的 Git workflow ，**Git Commit 即 Blog Post**
-* 利用 GitHub Pages 的域名和免费无限空间，不用自己折腾主机
-	* 如果需要自定义域名，也只需要简单改改 DNS 加个 CNAME 就好了 
-* Jekyll 的自定制非常容易，基本就是个模版引擎
 
 
 
 ---
 
 
-主题我直接 Downlosd 了 [Hux的博客主题](https://huangxuan.me/) 的进行修改，简单粗暴，不过遇到了很多坑😂，好在都填完了。。。
 
 
 ## 后记
 
-最后，感谢 Hux 提供的的 [Blog 主题](https://github.com/Huxpro/huxpro.github.io)
+这个博客主要是在fork 邱柏荧的站。
 
-如果你恰好逛到了这里，希望你也能喜欢这个博客主题，感兴趣的话可以自己动手搭建一个。
+感谢 [Blog 源码](https://github.com/qiubaiying/qiubaiying.github.io)
 
-—— BY 后记于 2017.2
+
+—— BY 后记于 2019.1
 
 
